manifest_template/ita-api-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ita-api-admin
  namespace: exastro-it-automation 
spec:
  selector:
    matchLabels:
      name: ita-api-admin 
  replicas: 1 
  template:
    metadata:
      labels:
        name: ita-api-admin 
    spec:
      containers:
      - name: ita-api-admin 
        image: ita-api-admin:0.4 
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ita-api-admin 
  namespace: exastro-it-automation 
  labels:
    name: ita-api-admin 
spec:
  type: NodePort 
  ports:
  - name: tomcat
    port: 8080
    targetPort: 8080
  selector:
    name: ita-api-admin
