manifest_template/ita-by-conductor-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ita-by-conductor-synchronize 
  namespace: exastro-it-automation 
spec:
  selector:
    matchLabels:
      name: ita-by-conductor-sync 
  replicas: 1 
  template:
    metadata:
      labels:
        name: ita-by-conductor-sync 
    spec:
      containers:
      - name: ita-by-conductor-sync 
        image: ita-api-admin:0.4  # temporary one (due to no fixed image yet) 
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ita-by-conductor-synchronize 
  namespace: exastro-it-automation 
  labels:
    name: ita-by-conductor-sync 
spec:
  type: NodePort 
  ports:
  - name: tomcat
    port: 8080
    targetPort: 8080
  selector:
    name: ita-by-conductor-sync
