manifest_template/ita-by-create-menu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ita-by-create-menu 
  namespace: exastro-it-automation 
spec:
  selector:
    matchLabels:
      name: ita-by-create-menu 
  replicas: 1 
  template:
    metadata:
      labels:
        name: ita-by-create-menu 
    spec:
      containers:
      - name: ita-by-create-menu 
        image: ita-api-admin:0.4  #temporary one ( due to no fixed image) 
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ita-by-create-menu 
  namespace: exastro-it-automation 
  labels:
    name: ita-by-create-menu 
spec:
  type: NodePort 
  ports:
  - name: tomcat
    port: 8080
    targetPort: 8080
  selector:
    name: ita-by-create-menu
