manifest_template/ita-web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ita-web-server
  namespace: exastro-it-automation 
spec:
  selector:
    matchLabels:
      name: ita-web-server 
  replicas: 1 
  template:
    metadata:
      labels:
        name: ita-web-server 
    spec:
      containers:
      - name: ita-web-server 
        image: ita-web-server:0.4 
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ita-web-server 
  namespace: exastro-it-automation 
  labels:
    name: ita-web-server 
spec:
  type: NodePort 
  ports:
  - name: tomcat
    port: 8000
    targetPort: 8000
  selector:
    name: ita-web-server
